# wallpaper-scaler

./: README.md  main.py  pyproject.toml
docs/plans/: 2026-02-26-background-color-extraction-design.md  2026-02-26-background-color-extraction.md
